# ChibiOS

./: CMakeLists.txt  modules.cmake
cmake_config/: board.cmake  compile_options.cmake
dev/applications/RT-STM32F407-DISCOVERY-G++/: main.cpp
dev/applications/unit_tests/board_2017_minimal_test/: application.cmake
dev/applications/unit_tests/board_2017_minimal_test/cfg/: mcuconf.h
dev/applications/unit_tests/board_2018a_minimal_test/: application.cmake  main.cpp
dev/applications/unit_tests/board_2018a_minimal_test/cfg/: mcuconf.h
dev/applications/unit_tests/board_407_minimal_test/: application.cmake  main.cpp
dev/applications/unit_tests/board_c_minimal_test/: application.cmake  main.cpp
dev/applications/unit_tests/board_unit_tests/board_2017_minimal_test/: main.cpp
dev/applications/unit_tests/board_unit_tests/board_2018a_minimal_test/: application.cmake  main.cpp
dev/applications/unit_tests/board_unit_tests/board_407_minimal_test/: main.cpp
dev/applications/unit_tests/module_unit_tests/board_c_buzzer_test/: main.cpp
dev/applications/unit_tests/module_unit_tests/board_c_buzzer_test/cfg/: mcuconf.h
dev/applications/unit_tests/module_unit_tests/board_c_can_test/: application.cmake  main.cpp
dev/applications/unit_tests/module_unit_tests/board_c_shell_test/: application.cmake  main.cpp
dev/applications/unit_tests/module_unit_tests/board_c_shell_test/cfg/: chconf.h  halconf.h
dev/executables/devices/cold_spray_blocker/: application.cmake  main.cpp
dev/executables/devices/cold_spray_blocker/cfg/: chconf.h
dev/executables/devices/roller_compaction/: application.cmake  main.cpp
dev/executables/devices/roller_compaction/cfg/: can_motor_config.cpp  can_motor_config.h
dev/executables/devices/surgery_robot_end_effectors/: application.cmake  main.cpp
dev/executables/devices/surgery_robot_end_effectors/cfg/: can_motor_config.cpp  can_motor_config.h  mcuconf.h
dev/executables/unit_tests/board_unit_tests/board_2017_minimal_test/: application.cmake
dev/executables/unit_tests/board_unit_tests/board_407_minimal_test/: application.cmake  main.cpp
dev/executables/unit_tests/board_unit_tests/board_c_minimal_test/: application.cmake  main.cpp
dev/executables/unit_tests/module_unit_tests/board_2018a_ahrs_test/: application.cmake  main.cpp
dev/executables/unit_tests/module_unit_tests/board_2018a_ahrs_test/cfg/: chconf.h  halconf.h  mcuconf.h
dev/executables/unit_tests/module_unit_tests/board_c_ahrs_test/: application.cmake  main.cpp
dev/executables/unit_tests/module_unit_tests/board_c_ahrs_test/cfg/: halconf.h  mcuconf.h
dev/executables/unit_tests/module_unit_tests/board_c_buzzer_test/: application.cmake
dev/executables/unit_tests/module_unit_tests/board_c_can_test/cfg/: mcuconf.h
dev/executables/unit_tests/module_unit_tests/board_c_rm_motor_test/: application.cmake  main.cpp
dev/executables/unit_tests/module_unit_tests/board_c_rm_motor_test/cfg/: can_motor_config.cpp
dev/executables/unit_tests/module_unit_tests/board_c_shell_test/: main.cpp
dev/executables/unit_tests/module_unit_tests/board_c_shell_test/cfg/: mcuconf.h
dev/interfaces/: can_interface.h
dev/modules/ahrs_module/: ahrs.cpp  ahrs.h  ahrs_lib_middleware.c  ahrs_lib_middleware.h  ahrs_math.hpp  imu_interface.cpp  imu_interface.h  imu_interface_template.cpp  imu_interface_template.h
dev/modules/ahrs_module/board_2018a_interface/: imu_interface.cpp  imu_interface.h  ist8310_reg.h
dev/modules/ahrs_module/board_c_interface/: bmi088_reg.h  imu_interface.cpp  imu_interface.h
dev/modules/buzzer_module/: buzzer_interface.h
dev/modules/can_module/: can_interface.cpp  can_interface.h
dev/modules/rm_motor_interface/: can_motor_interface.cpp  can_motor_interface.h
dev/modules/shell_module/: shell.cpp  shell.h  shell_base_cmd.c  shellconf.h
dev/modules/usb_serial/: usb_serial.h
dev/modules/usb_serial_module/: usb_serial_interface.cpp  usb_serial_interface.h
lib/cmsis_dsp/: CMakeLists.txt
os/: ch.cmake
os/common/abstractions/cmsis_dsp/: CMakeLists.txt
os/hal/boards/ST_STM32F427_ROBOMASTER_2017/: board.h
os/hal/boards/ST_STM32F427_ROBOMASTER_2018A/: board.h
